spider core and download

--- a/instance/spaceux/settings.json
+++ b/instance/spaceux/settings.json
@@ -1,5 +1,6 @@
 {
-"url_info_redis_db":["localhost",6379],
-"drilling_info_redis_db":["localhost",6379],
-"proxy_info_redis_db":["localhost",6379,3]
+    "url_info_redis_db":["localhost",6379],
+    "drilling_info_redis_db":["localhost",6379],
+    "proxy_info_redis_db":["localhost",6379,3],
+    "proxyRouter":"http://localhost:8080"
 }
