--- a/instance/spaceux/settings.json
+++ b/instance/spaceux/settings.json
@@ -1,6 +1,8 @@
 {
-    "url_info_redis_db":["localhost",6379],
-    "drilling_info_redis_db":["localhost",6379],
+    "driller_info_redis_db":["localhost",6379,0],
+    "url_info_redis_db":["localhost",6379,1],
     "proxy_info_redis_db":["localhost",6379,3],
-    "proxy_router":"localhost:2013"
+    "proxy_router":"127.0.0.1:2013",
+    "crawled_hbase_db":["192.168.1.244",8080,"crawled"],
+    "check_driller_rules_interval":120000
 }
