--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
         	"log4js": "0.6.9",
         	"optimist": "0.6.0",
         	"redis" : "0.9.0",
-            "cheerio" : "0.12.4"
+            "cheerio" : "0.12.4",
+            "iconv-lite":"0.2.11",
+            "bufferhelper":"0.2.0",
+            "hbase":"0.1.6"
         }
 }
