--- a/instance/spaceux/settings.json
+++ b/instance/spaceux/settings.json
@@ -4,5 +4,6 @@
     "proxy_info_redis_db":["localhost",6379,3],
     "proxy_router":"127.0.0.1:2013",
     "crawled_hbase_db":["192.168.1.244",8080,"crawled"],
-    "check_driller_rules_interval":120000
+    "check_driller_rules_interval":120000,
+    "spider_concurrency":5
 }
