fix reschedule bugs

--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
           "hbase":"0.1.6",
           "ejs" : "0.8.5",
           "express" : "3.3.4",
+          "stylus" : "0.40.3"
           "async" : "0.2.9"
         }
-}
