--- a/instance/spaceux/settings.json
+++ b/instance/spaceux/settings.json
@@ -2,10 +2,11 @@
     "driller_info_redis_db":["192.168.1.245",6379,0],
     "url_info_redis_db":["192.168.1.245",6379,1],
     "proxy_info_redis_db":["192.168.1.245",6379,3],
+    "use_proxy":true,
     "proxy_router":"192.168.1.244:2013",
     "crawled_hbase_db":["192.168.1.244",8080,"crawled"],
     "check_driller_rules_interval":120,
     "spider_concurrency":30,
     "schedule_interval":60,
-    "schedule_quantity_limitation":2000
+    "schedule_quantity_limitation":200
 }
