--- a/instance/spaceux/settings.json
+++ b/instance/spaceux/settings.json
@@ -5,6 +5,7 @@
     "use_proxy":true,
     "proxy_router":"127.0.0.1:2013",
     "crawled_hbase_db":["192.168.1.244",8080,"crawled"],
+    "statistic_mysql_db":["192.168.1.246",3306,"crawling","crawler","140109"],
     "check_driller_rules_interval":120,
     "spider_concurrency":30,
     "spider_request_delay":0,
