--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         },
         
         "dependencies": {
+              "mysql":"2.0.0",
               "log4js": "0.6.9",
               "optimist": "0.6.0",
               "redis" : "0.9.0",
