--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         },
         
         "dependencies": {
-              "mysql":"2.0.0",
               "log4js": "0.6.9",
               "optimist": "0.6.0",
               "redis" : "0.9.0",
@@ -41,9 +40,7 @@
               "express" : "3.3.4",
               "stylus" : "0.40.3",
               "async" : "0.2.9",
-              "line-reader" : "0.2.3",
-              "moment" : "2.4.0",
-              "crawler": "0.2.5"
+              "mysql":"2.0.0"
         },
         "scripts" : {
             "start" : "node run.js",
