--- a/instance/spaceux/settings.json
+++ b/instance/spaceux/settings.json
@@ -4,6 +4,7 @@
     "proxy_info_redis_db":["192.168.1.245",6379,3],
     "use_proxy":true,
     "proxy_router":"127.0.0.1:2013",
+    "download_timeout":60,
     "crawled_hbase_db":["192.168.1.244",8080,"crawled"],
     "statistic_mysql_db":["192.168.1.246",3306,"crawling","crawler","140109"],
     "check_driller_rules_interval":120,
