--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
               "cheerio" : "0.12.4",
               "iconv-lite":"0.2.11",
               "bufferhelper":"0.2.0",
+              "async":">=0.2.10",
               "request":"2.33.0",
               "thrift":"0.9.1",
               "hbase":"0.1.6",
