--- a/instance/pengtouba/settings.json
+++ b/instance/pengtouba/settings.json
@@ -1,9 +1,9 @@
 {
-    "driller_info_redis_db":["192.168.8.88",6380,0],
-    "url_info_redis_db":["192.168.8.88",6380,1],
-    "url_report_redis_db":["192.168.8.88",6380,2],
-    "proxy_info_redis_db":["192.168.8.88",6380,3],
-    "use_proxy":true,
+    "driller_info_redis_db":["192.168.1.5",6380,0],
+    "url_info_redis_db":["192.168.1.5",6380,1],
+    "url_report_redis_db":["192.168.1.5",6380,2],
+    "proxy_info_redis_db":["192.168.1.5",6380,3],
+    "use_proxy":false,
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
     "save_content_to_hbase":false,
