--- a/instance/example/settings.json
+++ b/instance/example/settings.json
@@ -7,7 +7,8 @@
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
     "save_content_to_hbase":false,
-    "crawled_hbase_db":["127.0.0.1",8080,"crawled"],
+    "crawled_hbase_conf":{"zookeeperHosts": ["localhost:2222"],"zookeeperRoot": "/hbase"},
+    "crawled_hbase_table":"crawled",
     "statistic_mysql_db":["127.0.0.1",3306,"crawling","crawler","123"],
     "check_driller_rules_interval":120,
     "spider_concurrency":5,
