--- a/instance/proxy/settings.json
+++ b/instance/proxy/settings.json
@@ -7,11 +7,13 @@
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
     "save_content_to_hbase":false,
-    "crawled_hbase_db":["192.168.1.4",8080,"crawled"],
+    "crawled_hbase_conf":{"zookeeperHosts": ["localhost:2222"],"zookeeperRoot": "/hbase"},
+    "crawled_hbase_table":"crawled",
     "statistic_mysql_db":["192.168.1.246",3306,"crawling","crawler","140109"],
     "check_driller_rules_interval":120,
     "spider_concurrency":5,
     "spider_request_delay":0,
     "schedule_interval":60,
-    "schedule_quantity_limitation":200
+    "schedule_quantity_limitation":200,
+    "log_level":"DEBUG"
 }
