--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
               "async":">=0.2.10",
               "request":"2.33.0",
               "thrift":"0.9.1",
-              "hbase":"0.1.6",
+              "hbase-client":">=0.5.0",
               "ejs" : "0.8.5",
               "express" : "3.3.4",
               "stylus" : "0.40.3",
