--- a/instance/proxy/settings.json
+++ b/instance/proxy/settings.json
@@ -1,8 +1,8 @@
 {
-    "driller_info_redis_db":["192.168.8.88",6379,0],
-    "url_info_redis_db":["192.168.8.88",6379,1],
-    "url_report_redis_db":["192.168.8.88",6380,2],
-    "proxy_info_redis_db":["192.168.8.88",6379,3],
+    "driller_info_redis_db":["backee",1789,0],
+    "url_info_redis_db":["backee",1789,1],
+    "url_report_redis_db":["backee",1789,2],
+    "proxy_info_redis_db":["backee",1789,3],
     "use_proxy":false,
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
@@ -16,5 +16,6 @@
     "spider_request_delay":0,
     "schedule_interval":60,
     "schedule_quantity_limitation":200,
-    "log_level":"DEBUG"
+    "log_level":"DEBUG",
+    "use_ssdb":true
 }
