--- a/instance/proxy/settings.json
+++ b/instance/proxy/settings.json
@@ -1,8 +1,8 @@
 {
-    "driller_info_redis_db":["backee",1789,0],
-    "url_info_redis_db":["backee",1789,1],
-    "url_report_redis_db":["backee",1789,2],
-    "proxy_info_redis_db":["backee",1789,3],
+    "driller_info_redis_db":["127.0.0.1",6379,0],
+    "url_info_redis_db":["127.0.0.1",6379,1],
+    "url_report_redis_db":["127.0.0.1",6379,2],
+    "proxy_info_redis_db":["127.0.0.1",6379,3],
     "use_proxy":false,
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
@@ -17,5 +17,5 @@
     "schedule_interval":60,
     "schedule_quantity_limitation":200,
     "log_level":"DEBUG",
-    "use_ssdb":true
+    "use_ssdb":false
 }
