--- a/instance/example/settings.json
+++ b/instance/example/settings.json
@@ -18,5 +18,6 @@
     "schedule_quantity_limitation":200,
     "download_retry":2,
     "log_level":"DEBUG",
-    "use_ssdb":false
+    "use_ssdb":false,
+    "to_much_fail_exit":false
 }
