--- a/instance/example/settings.json
+++ b/instance/example/settings.json
@@ -7,7 +7,7 @@
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
     "save_content_to_hbase":false,
-    "crawled_hbase_conf":{"zookeeperHosts": ["localhost:2222"],"zookeeperRoot": "/hbase"},
+    "crawled_hbase_conf":{"zookeeperHosts": ["localhost:2222"],"zookeeperRoot": "/hbase","rootRegionZKPath": "/meta-region-server","rpcTimeout": 30000,"pingTimeout": 30000,"callTimeout": 5000},
     "crawled_hbase_table":"crawled",
     "crawled_hbase_bin_table":"crawled_bin",
     "statistic_mysql_db":["127.0.0.1",3306,"crawling","crawler","123"],
