--- a/package.json
+++ b/package.json
@@ -28,23 +28,26 @@
                 "url": "http://git.oschina.net/dreamidea/neocrawler.git"
         },
         
-        "dependencies": {
-              "log4js": "0.6.9",
-              "optimist": "0.6.0",
-              "redis" : "0.9.0",
-              "cheerio" : "0.12.4",
-              "iconv-lite":"0.2.11",
-              "bufferhelper":"0.2.0",
-              "async":">=0.2.10",
-              "request":"2.33.0",
-              "thrift":"0.9.1",
-              "hbase-client":">=0.5.0",
-              "hbase":"0.1.6",
-              "ejs" : "0.8.5",
-              "express" : "3.3.4",
-              "stylus" : "0.40.3",
-              "mysql":"2.0.0",
-              "mongodb":">=1.4.0-rc8"
+            "dependencies": {
+                "log4js": "0.6.9",
+                "optimist": "0.6.0",
+                "redis" : "0.9.0",
+                "cheerio" : "0.12.4",
+                "iconv-lite":"0.2.11",
+                "bufferhelper":"0.2.0",
+                "async":">=0.2.10",
+                "request":"2.33.0",
+                "thrift":"0.9.1",
+                "hbase":"0.1.6",
+                "protobufjs": "^2.2.1",
+                "zookeeper-watcher": "^0.2.0",
+                "readable-stream": "^1.0.26-4",
+                "debug": "^1.0.0",
+                "ejs" : "0.8.5",
+                "express" : "3.3.4",
+                "stylus" : "0.40.3",
+                "mysql":"2.0.0",
+                "mongodb":">=1.4.0-rc8"
         },
         "scripts" : {
             "start" : "node run.js",
