add configration keep_drill_relation

--- a/instance/example/settings.json
+++ b/instance/example/settings.json
@@ -19,5 +19,6 @@
     "download_retry":2,
     "log_level":"DEBUG",
     "use_ssdb":false,
-    "to_much_fail_exit":false
+    "to_much_fail_exit":false,
+    "keep_link_relation":false
 }
