replace closure function to common function. force gc when crawling finished

--- a/instance/example/settings.json
+++ b/instance/example/settings.json
@@ -1,13 +1,13 @@
 {
-    "driller_info_redis_db":["10.1.15.88",6379,0],
-    "url_info_redis_db":["10.1.15.88",6379,1],
-    "url_report_redis_db":["10.1.15.88",6379,2],
-    "proxy_info_redis_db":["10.1.15.88",6379,3],
+    "driller_info_redis_db":["localhost",6379,0],
+    "url_info_redis_db":["localhost",6379,1],
+    "url_report_redis_db":["localhost",6379,2],
+    "proxy_info_redis_db":["localhost",6379,3],
     "use_proxy":false,
     "proxy_router":"127.0.0.1:2013",
     "download_timeout":60,
     "save_content_to_hbase":false,
-    "crawled_hbase_conf":{"zookeeperHosts": ["localhost:2222"],"zookeeperRoot": "/hbase","rootRegionZKPath": "/meta-region-server","rpcTimeout": 30000,"pingTimeout": 30000,"callTimeout": 5000},
+    "crawled_hbase_conf":["localhost",8080],
     "crawled_hbase_table":"crawled",
     "crawled_hbase_bin_table":"crawled_bin",
     "statistic_mysql_db":["127.0.0.1",3306,"crawling","crawler","123"],
