sort domain rules by length

--- a/instance/wiki/settings.json
+++ b/instance/wiki/settings.json
@@ -4,7 +4,7 @@
     "url_report_redis_db":["localhost",6379,2],
     "proxy_info_redis_db":["localhost",6379,3],
     "use_proxy":false,
-    "proxy_router":"127.0.0.1:2013",
+    "proxy_router":"localhost:8118",
     "download_timeout":60,
     "save_content_to_hbase":false,
     "crawled_hbase_conf":["localhost",8080],
@@ -12,8 +12,8 @@
     "crawled_hbase_bin_table":"crawled_bin",
     "statistic_mysql_db":["127.0.0.1",3306,"crawling","crawler","123"],
     "check_driller_rules_interval":120,
-    "spider_concurrency":5,
-    "spider_request_delay":0,
+    "spider_concurrency":1,
+    "spider_request_delay":10,
     "schedule_interval":30,
     "schedule_quantity_limitation":200,
     "download_retry":2,
