--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "async": ">=0.2.10",
     "bufferhelper": "0.2.0",
     "cheerio": "0.12.4",
+    "co": "^4.6.0",
     "debug": "^1.0.0",
     "ejs": "0.8.5",
+    "elasticsearch": "^12.1.3",
     "express": "3.3.4",
     "generic-pool": ">=2.1.1",
     "hbase": "0.1.6",
